--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
         <div class="name-tag"><span>03.</span> &nbsp; Ridho</div>
         <div class="name-tag"><span>04.</span> &nbsp; Rehan</div>
         <div class="name-tag"><span>05.</span> &nbsp; Wira</div>
-        <p style="margin-top: 30px; font-size: 0.9rem; color: #64748b;">Dibangun menggunakan HTML5, CSS3 Modern (Glassmorphism), dan Vanilla JavaScript.</p>
+        <p style="margin-top: 30px; font-size: 0.9rem; color: #64748b;">TERIMA KASIH</p>
     </div>
 
 </div>
