--- a/index.html
+++ b/index.html
@@ -133,15 +133,13 @@
         </div>
     </div>
 
-    <nav class="navbar navbar-expand-lg navbar-jdih">
-        <div class="container">
-            <a class="navbar-brand d-flex align-items-center" href="#">
-                <i class="fas fa-landmark fa-2x text-primary me-3"></i>
-                <div>
-                    <div class="judul-instansi">JDIH DPRD</div>
-                    <div class="sub-judul">PROVINSI KEPULAUAN RIAU</div>
-                </div>
-            </a>
+   <a class="navbar-brand d-flex align-items-center" href="#">
+    <img src="logo.png" alt="Logo DPRD" height="55" class="me-3"> 
+    <div>
+        <div class="judul-instansi">JDIH DPRD</div>
+        <div class="sub-judul">PROVINSI KEPULAUAN RIAU</div>
+    </div>
+</a>
             <button class="navbar-toggler border-0" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
             </button>
