--- a/index.html
+++ b/index.html
@@ -133,8 +133,8 @@
         </div>
     </div>
 
-   <a class="navbar-brand d-flex align-items-center" href="#">
-    <img src="logo.png" alt="Logo DPRD" height="55" class="me-3"> 
+  <a class="navbar-brand d-flex align-items-center" href="#">
+    <i class="fas fa-landmark fa-2x text-primary me-3"></i>
     <div>
         <div class="judul-instansi">JDIH DPRD</div>
         <div class="sub-judul">PROVINSI KEPULAUAN RIAU</div>
